K8/negotiator-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: negotiator-v3-service
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    service: negotiator-v3-service
