K8/negotiator-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: negotiator-v3-ingress
  annotations:                                                                  
    kuberentes.io/ingress.class: "nginx"                                        
    kubernetes.io/tls-acme: "true"                                              
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:                                                                          
    - hosts:                                                                    
        - "negotiator-v3.dyn.cloud.e-infra.cz"                                              
      secretName: negotiator-v3-dyn-cloud-e-infra-cz-tls
  rules:
  - host: negotiator-v3.dyn.cloud.e-infra.cz
    http:
      paths:
      - backend:
          serviceName: negotiator-v3-service
          servicePort: 8080
